two-way binding

--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -25,4 +25,7 @@
   </li>
 </ul>
 
-<app-hero-detail [hero]="selectedHero"></app-hero-detail>
+<app-hero-detail
+  [hero]="selectedHero"
+  (selectedHeroTest)="selectHeroTest($event)"
+></app-hero-detail>
