--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -6,4 +6,6 @@
     <input id="hero-name" [(ngModel)]="hero.name" placeholder="name" />
   </div>
   <button (click)="selectedTest(hero)">Test</button>
+
+  <button type="button" (click)="goBack()">Go back</button>
 </div>
