--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -9,19 +9,10 @@
 
 <h2>My Heroes</h2>
 <ul class="heroes">
-  <li
-    *ngFor="let hero of heroes; let i =index;  let even = even; let odd = odd"
-  >
-    <button
-      type="button"
-      (click)="onSelect(hero)"
-      [class.selected]="hero === selectedHero"
-    >
-      <!-- <span>{{i + 1}}</span>
-      <span>{{even ? "Even" : "Odd"}}</span> -->
-      <span class="badge">{{hero.id}}</span>
-      <span class="name">{{hero.name}}</span>
-    </button>
+  <li *ngFor="let hero of heroes">
+    <a routerLink="/detail/{{hero.id}}">
+      <span class="badge">{{hero.id}}</span> {{hero.name}}
+    </a>
   </li>
 </ul>
 
